Fixing navbar logo spacing

--- a/css/main.css
+++ b/css/main.css
@@ -350,18 +350,26 @@ nav {
       padding: 2.5em 0; }
       nav .nav-content h1 {
         display: none !important; }
-      nav .nav-content .menu-first {
-        width: 49.15254%;
-        float: left;
-        margin-right: 1.69492%;
-        text-align: right;
-        padding-right: 4em; }
-      nav .nav-content .menu-second {
-        width: 49.15254%;
-        float: right;
-        margin-right: 0;
-        text-align: left;
-        padding-left: 4em; }
+      nav .nav-content .menu-container {
+        max-width: 1600px;
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 1200px;
+        margin: 0 auto; }
+        nav .nav-content .menu-container:after {
+          content: " ";
+          display: block;
+          clear: both; }
+        nav .nav-content .menu-container .menu-first {
+          width: 40.67797%;
+          float: left;
+          margin-right: 1.69492%;
+          text-align: center; }
+        nav .nav-content .menu-container .menu-second {
+          width: 40.67797%;
+          float: right;
+          margin-right: 0;
+          text-align: center; }
       nav .nav-content .menu .menu-item {
         display: inline !important;
         padding: 0;
