--- a/sass/components/navbar/navMenu56em.scss
+++ b/sass/components/navbar/navMenu56em.scss
@@ -1,14 +1,21 @@
-.menu-first {
-	@include span(6 of 12);
-	text-align: right;
-	padding-right: 4em;
+.menu-container {
+	@include container;
+	max-width: 1200px;
+	margin: 0 auto;
+	.menu-first {
+		@include span(5 of 12);
+		text-align: center;
+		//padding-right: 6.5em;
+	}
+
+	.menu-second {
+		@include span(5 of 12 last);
+		text-align: center;
+		//padding-left: 6.5em;
+	}
 }
 
-.menu-second {
-	@include span(6 of 12 last);
-	text-align: left;
-	padding-left: 4em;
-}
+
 
 .menu {
 	.menu-item {
